--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Inventory Management System</title>
   </head>
   <body>
-    <script src="inventory-man-system.js"></script>
+    <h1>Syntax Squad Grocery Store Inventory</h1>
+    <script src="bakery.js"></script>
+    <script src="beverages.js"></script>
+    <script src="cannedGoods.js"></script>
+    <script src="dairy.js"></script>
+    <script src="frozen.js"></script>
+    <script src="produce.js"></script>
+    <script src="snacks.js"></script>
+    <script src="household.js"></script>
+    <script src="main.js"></script>
+
+    <script>
+      console.log("Inventory loaded:", inventory.length);
+    </script>
   </body>
 </html>
