made changes to the html and js files

--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
   </head>
   <body>
     <h1>Syntax Squad Grocery Store Inventory</h1>
-    <script src="bakery.js"></script>
-    <script src="beverages.js"></script>
-    <script src="cannedGoods.js"></script>
-    <script src="dairy.js"></script>
-    <script src="frozen.js"></script>
-    <script src="produce.js"></script>
-    <script src="snacks.js"></script>
-    <script src="household.js"></script>
+    <script src="inventory.js"></script>
     <script src="main.js"></script>
 
     <script>
