--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="inventory.js"></script>
     <script src="main.js"></script>
 
-    <script>
+    <!-- <script>
       console.log("Inventory loaded:", inventory.length);
-    </script>
+    </script> -->
   </body>
 </html>
